F&GDEV/src/objects/State__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of supported policy states.</description>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines whether a state is currently available for product development.</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <description>USPS 2 Character State Code</description>
        <externalId>true</externalId>
        <label>State Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>excludeFromProductStateCreation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>excludeFromProductStateCreation</label>
        <type>Checkbox</type>
    </fields>
    <label>State</label>
</CustomObject>